--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@langchain/ollama": "0.2.0",
     "@langchain/openai": "0.2.8",
     "@langchain/tavily": "^0.1.1",
+    "@zohocrm/nodejs-sdk-2.0": "^6.1.0",
     "cors": "2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "pdf-parse": "^1.1.1",
     "resend": "4.1.2",
     "uuid": "10.0.0"
   }
