--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": ""
+    "start": "",
+    "dev": "npx tsx src/index.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -23,8 +24,10 @@
     "cors": "2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "resend": "4.1.2",
-    "uuid": "10.0.0"
+    "uuid": "10.0.0",
+    "zcrmsdk": "^1.1.0"
   }
 }
