--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@langchain/tavily": "^0.1.1",
     "@zohocrm/nodejs-sdk-2.0": "^6.1.0",
     "cors": "2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "fuse.js": "^7.1.0",
     "langchain": "^0.3.24",
     "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
@@ -37,5 +40,4 @@
     "uuid": "10.0.0",
     "zcrmsdk": "^1.1.0"
   }
-
 }
